trunk/tests/kiama/negative/type_errors/L4/7_badarray12.ob
MODULE badarray8;

VAR
    array2 : ARRAY 26 OF BOOLEAN;
    
BEGIN
    array2 := array2 + 1
END badarray8.
